syntax = "proto3";

package info;

option go_package = "github.com/werbot/werbot/internal/grpc/info/proto";

import "validate/validate.proto";
import "internal/grpc/user/proto/user.proto";

service InfoHandlers {
  rpc UserMetrics(UserMetrics.Request) returns (UserMetrics.Response) {}
}

// rpc UserMetrics
message UserMetrics {
  message Request {
    string user_id = 1     [(validate.rules).string = {ignore_empty: true, uuid: true}]; // @gotags: query:"user_id" params:"user_id"
    user.Role role = 2;
  }

  message Response {
    int32 users = 1;
    int32 projects = 2;
    int32 servers = 3;
  }
}
// -----------------------------------------------------
